# ppgcc-deep-learning-pinn

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
artigo/: artigo.aux  artigo.bbl  artigo.bib  artigo.blg  artigo.out  artigo.tex
data/01_raw/differential-equation/: AIDS.DTA  AIDS.INF  BACTERIA.DTA  BACTERIA.INF  BADMIN.DTA  BADMIN.INF  BEAM.DTA  BEAM.INF  BEANS.DTA  BEANS.INF  BOMBAY.DTA  BOMBAY.INF  BOSTON.DTA  BOSTON.INF  BOTSWANA.DTA  BOTSWANA.INF  BPF.DTA  BPF.INF  BRAKE.DTA  BRAKE.INF  BULLET.DTA  BULLET.INF  BUOY.DTA  BUOY.INF  CALVES.DTA  CALVES.INF  CAR.DTA  CAR.INF  COFFEE.DTA  COFFEE.INF  CRAB.DTA  CRAB.INF  CUBIC.DTA  CUBIC.INF  CYNTHIA.DTA  CYNTHIA.INF  DENECKE.DTA  DENECKE.INF  DIOXIDE.DTA  DIOXIDE.INF  (+155 more)
notebooks/: 00_wildfire_spread_eda_00.ipynb  00_wildfire_spread_eda_02.ipynb  00_wildfire_spread_eda_03.ipynb  01_wildfire_spread_dataprep_00.ipynb  02_wildfire_spread_dataviz_00.ipynb  03_wildfire_spread_training_00.ipynb  bateman_burgers_equation.ipynb  damped_harmonic_oscillator.ipynb  dho_with_param_learning.ipynb  dho_with_param_learning_debug_0.ipynb  dho_without_param_learning.ipynb  dho_without_param_learning_debug.ipynb  dho_without_param_learning_debug_0.ipynb  dho_without_param_learning_debug_1.ipynb  dho_without_param_learning_debug_2.ipynb  dho_without_param_learning_debug_4.ipynb  driven_harmonic_oscillator.ipynb  equations.ipynb  gromacs.ipynb  lagrangian.ipynb  newton_law_cooling.ipynb  nlc_with_param_learning.ipynb  nlc_without_param_learning.ipynb  oscilador_harmonico.ipynb  remote-sensing-cnn-binary-classification.ipynb  ryckaert-bellemans-dihedral-potential.ipynb  wildfire_spread_dataprep_02.ipynb  wildfire_spread_dataprep_03.ipynb  wildfire_spread_eda_01.ipynb  wildfire_spread_eda_02.ipynb
notebooks/debug/: dho_without_param_learning.ipynb  equations.ipynb
src/: newton_law_cooling.py  script_debugger_dummy.py
(+65 files in other folders)
