[tool.poetry]
name = "ppgcc-deep-learning-pinn"
version = "0.1.0"
description = ""
authors = ["dsthiago <thiagosd.2.18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
lightning = "^2.1.0"
ipykernel = "^6.25.2"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.7.0"
pandas = "^2.1.1"
seaborn = "^0.13.0"
torch = ">=2.0.0, !=2.0.1, !=2.1.0" # https://stackoverflow.com/a/76647180
scikit-learn = "^1.3.1"
optuna = "^3.4.0"
plotly = "^5.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
