[tool.poetry]
name = "ppgcc-deep-learning-pinn"
version = "0.1.0"
description = ""
authors = ["dsthiago <thiagosd.2.18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
lightning = "^2.1.0"
ipykernel = "^6.25.2"
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.7.0"
pandas = "^2.1.1"
seaborn = "^0.13.0"
torch = ">=2.0.0, !=2.0.1, !=2.1.0" # https://stackoverflow.com/a/76647180
scikit-learn = "^1.3.1"
optuna = "^3.4.0"
plotly = "^5.17.0"
fastparquet = "^2023.10.1"
pytorchtools = "^0.0.2"
geopandas = "^0.14.1"
folium = "^0.15.0"
tensorflow = "^2.15.0"
selenium = "^4.15.2"
cartopy = "^0.22.0"
xarray = "^2023.11.0"
netcdf4 = "^1.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
